samples/_failures_safe/1761668494_158877_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55516f47.c: In function ‘main’:
./samples/SAFE/__tmp_55516f47.c:149:5: error: expected declaration or statement at end of input
  149 |     int found = 0;
      |     ^~~
